k8s-spec/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: res-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: myres-svc.172.105.45.105.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restuarant-service
                port:
                  number: 80
